opam-version: "1.2"
name: "ppx_relit"
version: "0.1"
maintainer: "Charles Chamberlain <charlespipin@gmail.com>"
authors: [
  "Charles Chamberlain <charlespipin@gmail.com"
  "Cyrus Omar <cyrus.omar@gmail.com"
]
homepage: "https://github.com/cyrus-/relit"
bug-reports: "https://github.com/cyrus-/relit/issues"
license: "MIT"
dev-repo: "https://github.com/cyrus-/relit"
build: [
  ["dune" "build" "-p" "ppx_relit"]
]
depends: [
  "dune"
  "ocamlfind"
  "ocaml-migrate-parsetree"
  "relit-reason"
  "base64"
  "ppxlib"
  "base-unix"
  "ocamlbuild"
]
