opam-version: "2.0"
maintainer: "Charles Chamberlain <charlespipin@gmail.com>"
authors: [
  "Charles Chamberlain <charlespipin@gmail.com>"
  "Cyrus Omar <cyrus.omar@gmail.com>"
]
homepage: "https://github.com/cyrus-/relit"
bug-reports: "https://github.com/cyrus-/relit/issues"
license: "MIT"
dev-repo: "git://github.com/cyrus-/relit.git"
build: [
  ["dune" "build" "-p" "ppx_relit"]
]
depends: [
  "dune" {build}
  "ocamlfind"
  "ocaml-migrate-parsetree"
  "relit-reason"
  "base64"
  "extlib"
  "ppxlib" {>= "0.3.1"}
  "base-unix"
  "ppx_expect" {with-test}
  "ocaml" {>= "4.07.0" & < "4.08.0"}
  "relit_helper"
]
synopsis: "An implementation of Typed Literal Macros for Reason"
