opam-version: "2.0"
name: "relit_helper"
version: "0.2"
maintainer: "Charles Chamberlain <charlespipin@gmail.com>"
authors: [
  "Charles Chamberlain <charlespipin@gmail.com>"
  "Cyrus Omar <cyrus.omar@gmail.com>"
]
homepage: "https://github.com/cyrus-/relit"
bug-reports: "https://github.com/cyrus-/relit/issues"
license: "MIT"
dev-repo: "git://github.com/cyrus-/relit.git"
build: [
  ["dune" "build" "-p" "relit_helper"]
]
depends: [
  "dune"
  "extlib"
  "ppxlib" {= "0.3.0"}
  "ocaml-migrate-parsetree" {= "1.0.11"}
  "base64"
  "relit-reason"
  "ocaml" {>= "4.07.0" & < "4.07.0"}
]
synopsis: "A helper library for those wishing to write TLMs using Relit"
