opam-version: "2.0"
maintainer: "Charles Chamberlain <charlespipin@gmail.com>"
authors: [
  "Charles Chamberlain <charlespipin@gmail.com>"
  "Cyrus Omar <cyrus.omar@gmail.com>"
]
homepage: "https://github.com/cyrus-/relit"
bug-reports: "https://github.com/cyrus-/relit/issues"
license: "MIT"
dev-repo: "git://github.com/cyrus-/relit.git"
build: [
  ["dune" "build" "-p" "relit_helper"]
]
depends: [
  "dune" {build}
  "extlib"
  "ppxlib" {>= "0.3.1"}
  "ocaml-migrate-parsetree"
  "base64"
  "relit-reason"
  "ocaml" {>= "4.07.0" & < "4.08.0"}
]
synopsis: "A helper library for those wishing to write TLMs using Relit"
