(executable
  (name        ppx_relit)
  (public_name ppx_relit)
  (libraries compiler-libs.common
             ocaml-migrate-parsetree
             ppxlib.metaquot
             relit_helper
             reason
             unix
             str
             base64
             )
  (preprocess (pps ppxlib.metaquot))
  (package ppx_relit))
