(library
  (name        ppx_relit)
  (public_name ppx_relit)
  (kind ppx_rewriter)
  (libraries compiler-libs.common
             ocaml-migrate-parsetree
             ppxlib
             ppx_optcomp
             ppxlib.metaquot
             relit_helper
             relit-reason
             unix
             str
             base64)
  (preprocess (pps ppxlib.metaquot ppx_optcomp)))
