opam-version: "1.2"
name: "ppx_relit"
version: "0.1"
maintainer: "Name <email>"
author: "Name <email>"
homepage: ""
bug-reports: ""
license: "MIT"
dev-repo: ""
build: [
  ["jbuilder" "build"]
]
install: ["jbuilder" "install" "ppx_relit"]
remove: ["ocamlfind" "remove" "project"]
depends: "ocamlfind"
