opam-version: "1.2"
name: "regex notation"
version: "0.1"
maintainer: "Name <email>"
author: "Name <email>"
homepage: ""
bug-reports: ""
license: "MIT"
dev-repo: ""
build: [
  ["dune" "build" "-p" "test_example"]
]
install: ["dune" "install" "test_example"]
remove: ["ocamlfind" "remove" "project"]
depends: "ocamlfind"
