opam-version: "1.2"
name: "timeline example for Relit"
version: "0.1"
maintainer: "Name <email>"
author: "Name <email>"
homepage: ""
bug-reports: ""
license: "MIT"
dev-repo: ""
build: [
  ["dune" "build" "-p" "timeline_example"]
]
install: ["dune" "install" "timeline_example"]
remove: ["ocamlfind" "remove" "project"]
depends: "ocamlfind"
