opam-version: "1.2"
name: "regex notation"
version: "0.1"
maintainer: "Name <email>"
author: "Name <email>"
homepage: ""
bug-reports: ""
license: "MIT"
dev-repo: ""
build: [
  ["jbuilder" "build"]
]
install: ["jbuilder" "install" "test_example"]
remove: ["ocamlfind" "remove" "project"]
depends: "ocamlfind"
