opam-version: "1.2"
name: "regex parser for regex_example"
version: "0.1"
maintainer: "Name <email>"
author: "Name <email>"
homepage: ""
bug-reports: ""
license: "MIT"
dev-repo: ""
build: [
  ["dune" "build" "-p" "regex_parser"]
]
install: ["dune" "install" "regex_parser"]
remove: ["ocamlfind" "remove" "project"]
depends: "ocamlfind"
