opam-version: "1.2"
name: "test parser for test_example"
version: "0.1"
maintainer: "Name <email>"
author: "Name <email>"
homepage: ""
bug-reports: ""
license: "MIT"
dev-repo: ""
build: [
  ["jbuilder" "build"]
]
install: ["jbuilder" "install" "test_parser"]
remove: ["ocamlfind" "remove" "project"]
depends: "ocamlfind"
